--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.1",
     "cars": "^1.1.6",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^6.7.1",
